Fixed wrapper style and header z-index.

--- a/static/css/ffcstyle.less
+++ b/static/css/ffcstyle.less
@@ -175,6 +175,7 @@ body{
   width:800px;
   margin:0 auto;
   position: relative;
+  z-index: 100000;
   &:after{
     .after_close;
   };
@@ -473,13 +474,9 @@ a#browserid:hover {
   
   html, body{
     width:100%;
-    height:100%;
-    overflow:hidden;
   }
   #body_wrapper{
     width:100%;
-    height:100%;
-    overflow:hidden;
     position:relative;
     &.opennav{
       width:100%;
@@ -492,10 +489,6 @@ a#browserid:hover {
   }
   
   #outer-wrapper{
-    height:100%;
-    overflow-x:hidden;
-    overflow-y:auto;
-    position:absolute;
     .transition_block (0.8s, ease-in-out, transform);
     .backfacehide;
   }
